<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="screen_orientation_preference"
        android:title="@string/pref_screen_orientation"
        android:entries="@array/screen_orientation_entries"
        android:entryValues="@array/screen_orientation_values"
        android:defaultValue="@string/pref_screen_orientation_default_value"/>
    <PreferenceScreen
        android:key="playback_options_screen"
        android:title="@string/pref_playback_options_screen_title">
        <ListPreference
            android:key="jump_back_preference"
            android:title="@string/pref_jump_back_title"
            android:entries="@array/jump_back_entries"
            android:entryValues="@array/jump_back_values"
            android:defaultValue="@string/pref_jump_back_default_value"/>
        <ListPreference
            android:key="sleep_timer_preference"
            android:title="@string/pref_sleep_timer_title"
            android:entries="@array/sleep_timer_entries"
            android:entryValues="@array/sleep_timer_values"
            android:defaultValue="0"/>
        <ListPreference
            android:key="playback_speed_preference"
            android:title="@string/pref_playback_speed_title"
            android:entries="@array/playback_speed_entries"
            android:entryValues="@array/playback_speed_values"
            android:defaultValue="@string/pref_playback_speed_default_value"/>
        <SwitchPreference
            android:key="ff_rewind_sound_preference"
            android:title="@string/pref_ff_rewind_sound"
            android:summaryOn="@string/pref_ff_rewind_sound_summary_on"
            android:summaryOff="@string/pref_ff_rewind_sound_summary_off"
            android:defaultValue="true"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="kiosk_mode_screen"
        android:title="@string/pref_kiosk_mode_screen_title">
        <SwitchPreference
            android:key="kiosk_mode_preference"
            android:title="@string/pref_kiosk_mode_full_title"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="simple_kiosk_mode_preference"
            android:title="@string/pref_kiosk_mode_simple_title"
            android:defaultValue="false"/>
        <com.studio4plus.homerplayer.ui.ConfirmDialogPreference
            android:key="unregister_device_owner_preference"
            android:title="@string/pref_kiosk_mode_unregister_device_owner"
            android:dialogMessage="@string/pref_kiosk_mode_unregister_device_owner_dialog_message"/>
    </PreferenceScreen>
    <com.studio4plus.homerplayer.ui.ConfirmDialogPreference
        android:key="reset_all_book_progress_preference"
        android:title="@string/pref_reset_all_book_progress"
        android:dialogTitle="@string/pref_reset_all_book_progress_dialog_title"/>
    <Preference
        android:key="faq_preference"
        android:title="@string/pref_help_faq_title" />
    <Preference
        android:key="version_preference"
        android:title="@string/pref_version_title"/>
</PreferenceScreen>