<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="color_theme"
        app:title="@string/pref_color_theme_title"
        app:entries="@array/color_theme_entries"
        app:entryValues="@array/color_theme_values"
        app:defaultValue="@string/pref_color_theme_default_value"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:key="screen_orientation_preference"
        app:title="@string/pref_screen_orientation"
        app:entries="@array/screen_orientation_entries"
        app:entryValues="@array/screen_orientation_values"
        app:defaultValue="@string/pref_screen_orientation_default_value"
        app:useSimpleSummaryProvider="true"/>

    <SwitchPreference
        app:key="volume_controls_preference"
        app:title="@string/pref_volume_controls"
        app:summaryOn="@string/pref_volume_controls_summary_on"
        app:summaryOff="@string/pref_volume_controls_summary_off"
        app:defaultValue="true"/>

    <SwitchPreference
        app:key="ff_rewind_sound_preference"
        app:title="@string/pref_ff_rewind_sound"
        app:summaryOn="@string/pref_ff_rewind_sound_summary_on"
        app:summaryOff="@string/pref_ff_rewind_sound_summary_off"
        app:defaultValue="true"/>
</PreferenceScreen>